[tool.poetry]
name = "langflow-streamlit"
version = "0.1.8"
description = ""
authors = ["YAITEC <contact@yaitec.org>"]
maintainers = [
    "João Pedro M. C. Hluchan <berrytern@gmail.com>",
    "João Oliveira <joao@yaitec.org>"
]
license = "MIT"
packages = [
    {include = "langflow_streamlit"},
    {include = "langflow-streamlit"}
]

include = [
    "pyproject.toml",
]

readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
streamlit = "^1.35.0"
fastapi = ">=0.115.2,<1.0.0"
python-dotenv = "^1.0.1"
langflow-base = "0.1.4"
langflow = "1.1.4"
typer = ">=0.13.0,<1.0.0"
httpx = "^0.27.0"
langchain-core = "0.3.33"

[tool.poetry.scripts]
langflow-streamlit = "langflow_streamlit.__main__:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
plugins = ["pydantic.mypy"]
follow_imports = "skip"
disable_error_code = ["type-var"]
namespace_packages = true
mypy_path = "langflow"
ignore_missing_imports = true
